<?xml version="1.0" encoding="utf-8"?><!--
    Copyright (C) Chaldeaprjkt

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
  -->

<resources>
    <string name="settings_title">Game Space</string>
    <string name="settings_summary">Manage your gaming setup</string>
    <string name="app_selector_label">Pick your game</string>
    <string name="auto_brightness_disabled_title">Disable auto-brightness</string>
    <string name="auto_brightness_disabled_summary">Keep brightness settled while in-game</string>
    <string name="heads_up_disabled_title">Disable heads-up</string>
    <string name="heads_up_disabled_summary">Disable Notification heads-up while in-game</string>
    <string name="game_list_title">Library</string>
    <string name="game_remove_message">Are you sure you want to remove %1$s from your library ?</string>
    <string name="app_search_title">Search</string>
    <string name="three_screenshot_disabled_summary">Temporary disable three-fingers-swipe screenshot gesture while in-game</string>
    <string name="three_screenshot_disabled_title">Disable swipe to screenshot</string>
    <string name="chaldea">chaldeaprjkt</string>
    <string name="state_enabled">enabled</string>
    <string name="state_disabled">disabled</string>
    <!-- Game Mode Name - sorted by GameManager's enum, do not modify the sequence! -->
    <string name="game_mode_title">Mode</string>
    <string-array name="game_mode_names">
        <item>Unsupported</item>
        <item>Standard</item>
        <item>Performance</item>
        <item>Battery</item>
    </string-array>
    <string name="heads_up_title">Heads-up</string>
    <string name="fps_Info_title">FPS Info</string>
    <string name="stay_awake_title">Stay Awake</string>
    <string name="stay_awake_summary">Keep screen awake while in the game</string>

    <string name="ringer_mode_title">In-game ringer mode</string>
    <string-array name="ringer_mode_entries">
        <item>Silent</item>
        <item>Vibrate</item>
        <item>Normal</item>
    </string-array>

    <string name="suppress_fullscreen_intent_title">Block fullscreen event</string>
    <string name="suppress_fullscreen_intent_summary">Prevent fullscreen events like incoming calls from appearing while in-game</string>

    <string name="per_app_title">Configure Game</string>
    <string name="per_app_mode_title">Preferred Mode</string>
    <string-array name="per_app_preferred_mode_entries">
        <item>Standard</item>
        <item>Performance</item>
        <item>Battery</item>
    </string-array>

    <string name="per_app_angle_title">Use ANGLE (experimental)</string>
    <string name="per_app_angle_summary">Using ANGLE renderer instead of native GLES drivers.\nWARNING!! May breaks game graphics, use with caution!</string>
    <string name="cant_find_angle_pkg">ANGLE is not available on your system</string>

    <string name="per_app_unregister">Remove %1$s from library</string>

</resources>
